# patterns

./: singleton.h
command_pattern/: CMakeLists.txt  main.cpp
visitor_pattern/: CMakeLists.txt  main.cpp  polymorphic_visitor.cpp  polymorphic_visitor.h  visitor.cpp  visitor.h
